// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyblok testimonial Default component should match snapshot for default variant 1`] = `
<div>
  <div
    class="testimonial testimonial--default"
    data-component="testimonial--default"
    data-testid="testimonial-default"
    data-tracking="testimonial"
  >
    <div
      class="testimonial__mainContent"
    >
      <figure
        class="testimonial__content"
      >
        <blockquote
          class="testimonial__quote"
        >
          Test Quote Text
        </blockquote>
        <figcaption
          class="testimonial__person"
        >
          <picture>
            <source
              srcset="https://placekitten.com/408/287/m/708x0/filters:format%28avif%29:quality%2880%29"
              type="image/avif"
            />
            <source
              srcset="https://placekitten.com/408/287/m/708x0/filters:format%28webp%29:quality%2880%29"
              type="image/webp"
            />
            <img
              alt="some alt text"
              class="testimonial__image testimonial__imageMobile"
              data-nimg="1"
              decoding="async"
              height="0"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fplacekitten.com%2F408%2F287%2Fm%2F708x0%2Ffilters%3Aformat%2528jpeg%2529%3Aquality%252880%2529&w=16&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fplacekitten.com%2F408%2F287%2Fm%2F708x0%2Ffilters%3Aformat%2528jpeg%2529%3Aquality%252880%2529&w=16&q=75 1x"
              style="color: transparent;"
              width="0"
            />
          </picture>
          <p
            class="testimonial__details"
          >
            <span
              class="testimonial__name"
            >
              Test Name
            </span>
            <span
              class="testimonial__job"
            >
              Test Role
            </span>
          </p>
        </figcaption>
      </figure>
      <div
        class="testimonial__mainImageContainer"
      >
        <picture>
          <source
            srcset="https://placekitten.com/408/287/m/708x0/filters:format%28avif%29:quality%2880%29"
            type="image/avif"
          />
          <source
            srcset="https://placekitten.com/408/287/m/708x0/filters:format%28webp%29:quality%2880%29"
            type="image/webp"
          />
          <img
            alt="some alt text"
            class="testimonial__image"
            data-nimg="1"
            decoding="async"
            height="0"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fplacekitten.com%2F408%2F287%2Fm%2F708x0%2Ffilters%3Aformat%2528jpeg%2529%3Aquality%252880%2529&w=16&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fplacekitten.com%2F408%2F287%2Fm%2F708x0%2Ffilters%3Aformat%2528jpeg%2529%3Aquality%252880%2529&w=16&q=75 1x"
            style="color: transparent;"
            width="0"
          />
        </picture>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyblok testimonial Default component should match snapshot for the default transparent variant 1`] = `
<div>
  <div
    class="testimonial testimonial--transparent"
    data-component="testimonial--transparent"
    data-testid="testimonial-transparent"
    data-tracking="testimonial"
  >
    <div
      class="testimonial__mainContent"
    >
      <figure
        class="testimonial__content"
      >
        <blockquote
          class="testimonial__quote"
        >
          Test Quote Text
        </blockquote>
        <figcaption
          class="testimonial__person"
        >
          <picture>
            <source
              srcset="https://placekitten.com/408/287/m/708x0/filters:format%28avif%29:quality%2880%29"
              type="image/avif"
            />
            <source
              srcset="https://placekitten.com/408/287/m/708x0/filters:format%28webp%29:quality%2880%29"
              type="image/webp"
            />
            <img
              alt="some alt text"
              class="testimonial__image testimonial__imageMobile"
              data-nimg="1"
              decoding="async"
              height="0"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fplacekitten.com%2F408%2F287%2Fm%2F708x0%2Ffilters%3Aformat%2528jpeg%2529%3Aquality%252880%2529&w=16&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fplacekitten.com%2F408%2F287%2Fm%2F708x0%2Ffilters%3Aformat%2528jpeg%2529%3Aquality%252880%2529&w=16&q=75 1x"
              style="color: transparent;"
              width="0"
            />
          </picture>
          <p
            class="testimonial__details"
          >
            <span
              class="testimonial__name"
            >
              Test Name
            </span>
            <span
              class="testimonial__job"
            >
              Test Role
            </span>
          </p>
        </figcaption>
      </figure>
      <div
        class="testimonial__mainImageContainer"
      >
        <picture>
          <source
            srcset="https://placekitten.com/408/287/m/708x0/filters:format%28avif%29:quality%2880%29"
            type="image/avif"
          />
          <source
            srcset="https://placekitten.com/408/287/m/708x0/filters:format%28webp%29:quality%2880%29"
            type="image/webp"
          />
          <img
            alt="some alt text"
            class="testimonial__image"
            data-nimg="1"
            decoding="async"
            height="0"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fplacekitten.com%2F408%2F287%2Fm%2F708x0%2Ffilters%3Aformat%2528jpeg%2529%3Aquality%252880%2529&w=16&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fplacekitten.com%2F408%2F287%2Fm%2F708x0%2Ffilters%3Aformat%2528jpeg%2529%3Aquality%252880%2529&w=16&q=75 1x"
            style="color: transparent;"
            width="0"
          />
        </picture>
      </div>
    </div>
  </div>
</div>
`;
